--- a/project/www/src/css/civilisation.css
+++ b/project/www/src/css/civilisation.css
@@ -30,7 +30,6 @@ div.desc {
   position: relative;
   width: 400px;
   min-width: 400px;
-  height: 400px;
   border-radius: 30px;
   overflow:hidden;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
@@ -39,16 +38,15 @@ div.desc {
 
 .hero-profile-img {
   width: 100%;
-  height: 60%;
+  height: 70%;
 }
 
 .hero-description-bk {
-  background-image: linear-gradient(0deg , #3f5efb, #fc466b);
   border-radius: 30px;
   position: absolute;
-  top: 55%;
+  top: 67%;
   left: -5px;
-  height: 15%;
+  height: 25%;
   width: 108%;
   transform: skew(19deg, -9deg);
 }
@@ -62,10 +60,14 @@ div.desc {
   position: absolute;
   color: #fff;
   font-weight: 900;
+  top: 74%;
   left: 150px;
   bottom: 32%;
   font-size: 25px;
+  transform: skew(19deg, -9deg);
 }
-
+.voir_aussi h2{
+  margin-left: 20px;
+}
 
 /* END CARD DESIGN */
