--- a/project/www/src/css/equipement_ind.css
+++ b/project/www/src/css/equipement_ind.css
@@ -1,8 +1,7 @@
 table {
 	display: table;
 	margin: auto;
-	width: 70%;
-	margin-bottom: 50px;
+	width: 100%;
 }
 
 table,
@@ -12,7 +11,7 @@ td {
 	text-align: left;
 	border: solid 1px rgba(104, 242, 255, 0.236);
 	border-collapse: collapse;
-	background-color: var(--medium-light-color);
+	background-color: var(--light-black-color);
 }
 
 th,
