--- a/project/www/src/css/patch_note.css
+++ b/project/www/src/css/patch_note.css
@@ -33,10 +33,8 @@
 }
 
 .patch-card__thumbnail img {
-
-    max-width: 100%;
+    width: 100%;
     height: auto;
-
     transition: all 0.5s ease;
 }
 
