--- a/project/www/src/css/streamer.css
+++ b/project/www/src/css/streamer.css
@@ -334,7 +334,7 @@
 	box-shadow: 0px 8px 60px -10px rgba(13, 28, 39, 0.6);
 	background: var(--light-color);
 	border-radius: 12px;
-	max-width: 500px;
+	max-width: 350px;
 	min-width: 300px;
 	position: relative;
 }
@@ -424,11 +424,7 @@
 		min-width: 120px;
    }
 }
-.profile-card-inf__title {
-	font-weight: 700;
-	font-size: 27px;
-	color: #324e63;
-}
+
 .profile-card-inf__txt {
 	font-weight: 500;
 	margin-top: 7px;
@@ -441,8 +437,8 @@
 }
 .profile-card-social__item {
 	display: inline-flex;
-	width: 45px;
-	height: 45px;
+	width: 35px;
+	height: 35px;
 	margin: 7px;
 	border-radius: 50%;
 	align-items: center;
@@ -455,20 +451,7 @@
 	flex-shrink: 0;
 	transition: all 0.3s;
 }
-@media screen and (max-width: 768px) {
-	.profile-card-social__item {
-		width: 50px;
-		height: 50px;
-		margin: 10px;
-   }
-}
-@media screen and (max-width: 480px) {
-	.profile-card-social__item {
-		width: 35px;
-		height: 35px;
-		margin: 6px;
-   }
-}
+
 @media screen and (min-width: 768px) {
 	.profile-card-social__item:hover {
 		transform: scale(1.2);
@@ -504,22 +487,19 @@
 }
 .profile-card-ctr {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 	margin-top: 40px;
 }
-@media screen and (max-width: 576px) {
-	.profile-card-ctr {
-		flex-wrap: wrap;
-   }
-}
+
 .profile-card__button {
 	background: none;
 	border: none;
 	font-family: 'jurabook', sans-serif;
 	font-weight: 700;
 	font-size: 19px;
-	margin: 15px;
+	margin: 15px 0;
 	padding: 15px 40px;
 	min-width: 201px;
 	border-radius: 50px;
@@ -529,24 +509,8 @@
 	backface-visibility: hidden;
 	transition: all 0.3s;
 }
-@media screen and (max-width: 768px) {
-	.profile-card__button {
-		min-width: 170px;
-		margin: 15px 15px;
-   }
-}
-@media screen and (max-width: 576px) {
-	.profile-card__button {
-		min-width: inherit;
-		margin: 0;
-		margin-bottom: 16px;
-		width: 100%;
-		max-width: 300px;
-   }
-	.profile-card__button:last-child {
-		margin-bottom: 0;
-   }
-}
+
+
 .profile-card__button:focus {
 	outline: none !important;
 }
