--- a/project/www/admin/src/template/objet/objet_all.html
+++ b/project/www/admin/src/template/objet/objet_all.html
@@ -3,6 +3,7 @@
         [#CITIZEN_TAB_CHOICE#]
         <div class="admin-title"><h1>[#CITIZEN_TAB_NAME#]</h1></div>
         <div class="admin-contenu-tab">
+            <input type="hidden" name="folder-img" name="folder-img" value="[#CITIZEN_FOLDER_IMG#]" />
             <input type="hidden" name="nbpg" id="nbpg" value="[#CITIZEN_TAB_NBPG#]">
             <input type="hidden" name="nmpg" id="nmpg" value="[#CITIZEN_TAB_NMPG#]">
             <button id="add-tab" class="two-column sauvegarde">Ajouter</button>
