(delete add mod) (service et propri)

--- a/project/www/admin/src/template/objet/add_mod_arm_fps.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_fps.html
@@ -88,6 +88,15 @@
         class="input-admin"
         [#CITIZEN_ARM_FPS_ISPRO#]
       />
+      <label for="lien">lien</label
+      ><input
+        type="text"
+        name="lien"
+        id="lien"
+        value="[#CITIZEN_ARM_FPS_LIEN#]"
+        class="input-admin"
+        [#CITIZEN_ARM_FPS_ISPRO#]
+      />
       <label for="contenu">contenu</label
       ><textarea
         name="contenu"
