--- a/project/www/admin/src/template/objet/add_mod_transp.html
+++ b/project/www/admin/src/template/objet/add_mod_transp.html
@@ -50,6 +50,15 @@
             <label for="poids">poids</label><input type="text" name="poids" id="poids" value="[#CITIZEN_TRANSP_POIDS#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
             <label for="vitesse-max">vitesse max</label><input type="text" name="vitesse-max" id="vitesse-max" value="[#CITIZEN_TRANSP_VITESSMAX#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
             <label for="capacite">capacite</label><input type="text" name="capacite" id="capacite" value="[#CITIZEN_TRANSP_CAPACITE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="lien">lien</label
+                ><input
+                  type="text"
+                  name="lien"
+                  id="lien"
+                  value="[#CITIZEN_TRANSP_LIEN#]"
+                  class="input-admin"
+                  [#CITIZEN_TRANSP_ISPRO#]
+                />
             <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_TRANSP_ISPRO#]>[#CITIZEN_TRANSP_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-force" name="radio-onglet" value="">
