--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -246,7 +246,7 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/sceditor@3/minified/sceditor.min.js"></script>
-    <script src="./../src/js/script.js"></script>
+    <!--<script src="./../src/js/script.js"></script>-->
     <script src="./../src/js/le_fetch.js"></script>
     <script>
         window.onscroll = function () {
