--- a/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
@@ -37,6 +37,15 @@
             <select name="constructeur" id="constructeur-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ARM_VAISS_CONST#]
             </select>
+            <label for="lien">lien</label
+            ><input
+              type="text"
+              name="lien"
+              id="lien"
+              value="[#CITIZEN_ARM_VAISS_LIEN#]"
+              class="input-admin"
+              [#CITIZEN_ARM_VAISS_ISPRO#]
+            />
             <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARM_VAISS_ISPRO#]>[#CITIZEN_ARM_VAISS_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="">
