--- a/project/www/admin/src/template/categories/categorieAndImg.html
+++ b/project/www/admin/src/template/categories/categorieAndImg.html
@@ -9,7 +9,7 @@
                     <img class="img-add" id="img-add" src="[#CITIZEN_CAT_IMG#]" alt="add img"[#CITIZEN_CAT_ISPRO#]>
                 </label>
             </div>
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_CAT_NOM#]" class="input-admin"[#CITIZEN_CAT_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_CAT_NOM#]" class="input-admin" required[#CITIZEN_CAT_ISPRO#]>
             <div class="two-column add-mod-bt">
                 <button class="sauvegarde" id="annuler-form">annuler</button>
                 <button class="sauvegarde" id="validation-form">Validation</button>
