--- a/project/www/admin/src/template/dialog/diplom.html
+++ b/project/www/admin/src/template/dialog/diplom.html
@@ -6,6 +6,7 @@
   id="dialog-nom"
   value="[#CITIZEN_ADD_DIPLOM_NOM#]"
   class="input-admin"
+  required
   [#CITIZEN_ADD_DIPLOM_ISPRO#]
 />
 <label for="dialog-traite">traité</label
@@ -15,5 +16,6 @@
   id="dialog-traite"
   value="[#CITIZEN_ADD_DIPLOM_TRAITE#]"
   class="input-admin"
+  required
   [#CITIZEN_ADD_DIPLOM_ISPRO#]
 />
