--- a/project/www/admin/src/template/dialog/faibl.html
+++ b/project/www/admin/src/template/dialog/faibl.html
@@ -1,5 +1,5 @@
 <div class="two-column admin-title"><h1>Faiblesse</h1></div>
 <label for="dialog-faibl-select">Faiblesse</label>
-<select name="faibl" id="dialog-faibl-select" class="input-admin"[#CITIZEN_DIALOG_ISPRO#]>
+<select name="faibl" id="dialog-faibl-select" class="input-admin" required[#CITIZEN_DIALOG_ISPRO#]>
     <option value=""></option>[#CITIZEN_DIALOG_FAIBL#]
 </select>
