--- a/project/www/admin/src/template/dialog/info.html
+++ b/project/www/admin/src/template/dialog/info.html
@@ -6,6 +6,7 @@
         id="dialog-nom"
         value="[#CITIZEN_ADD_INFO_NOM#]"
         class="input-admin"
+        required
         [#CITIZEN_ADD_INFO_ISPRO#]
       />
       <label for="dialog-contenu">contenu</label
@@ -15,6 +16,7 @@
         cols="30"
         rows="10"
         class="input-admin text-bbcode"
+        required
         [#CITIZEN_ADD_INFO_ISPRO#]
       >
 [#CITIZEN_ADD_INFO_CONTENU#]</textarea
