--- a/project/www/admin/src/template/dialog/lieuArm.html
+++ b/project/www/admin/src/template/dialog/lieuArm.html
@@ -1,10 +1,10 @@
 <div class="two-column admin-title"><h1>Lieu</h1></div>
 <label for="dialog-lieu-select">lieu</label>
-<select name="lieu" id="dialog-lieu-select" class="input-admin"[#CITIZEN_DIALOG_ISPRO#]>
+<select name="lieu" id="dialog-lieu-select" class="input-admin" required[#CITIZEN_DIALOG_ISPRO#]>
     <option value=""></option>[#CITIZEN_DIALOG_LIEU#]
 </select>
 <label for="dialog-couleur-select">couleur</label>
-<select name="couleur" id="dialog-couleur-select" class="input-admin"[#CITIZEN_DIALOG_ISPRO#]>
+<select name="couleur" id="dialog-couleur-select" class="input-admin" required[#CITIZEN_DIALOG_ISPRO#]>
     <option value=""></option>[#CITIZEN_DIALOG_COULEUR#]
 </select>
 <label for="dialog-prix-select">prix</label>
@@ -13,5 +13,6 @@
         name="prix" id="dialog-prix-select"
         value="[#CITIZEN_DIALOG_PRIX#]"
         class="input-admin"
+        required
         [#CITIZEN_DIALOG_ISPRO#]
       />
