--- a/project/www/admin/src/template/dialog/lieuMatPre.html
+++ b/project/www/admin/src/template/dialog/lieuMatPre.html
@@ -9,6 +9,7 @@
         name="prix-vente" id="dialog-prix-vente-select"
         value="[#CITIZEN_DIALOG_PRIX_VENT#]"
         class="input-admin"
+        required
         [#CITIZEN_DIALOG_ISPRO#]
       />
 <label for="dialog-prix-achat-select">prix achat</label>
@@ -17,6 +18,7 @@
         name="prix-achat" id="dialog-prix-achat-select"
         value="[#CITIZEN_DIALOG_PRIX_ACHAT#]"
         class="input-admin"
+        required
         [#CITIZEN_DIALOG_ISPRO#]
       />
 <label for="dialog-actu-min-select">actu min</label>
@@ -25,6 +27,7 @@
         name="actu-min" id="dialog-actu-min-select"
         value="[#CITIZEN_DIALOG_ACTU_MIN#]"
         class="input-admin"
+        required
         [#CITIZEN_DIALOG_ISPRO#]
       />
 <label for="dialog-inv-max-select">inv max</label>
@@ -33,5 +36,6 @@
         name="inv-max" id="dialog-inv-max-select"
         value="[#CITIZEN_DIALOG_INV_MAX#]"
         class="input-admin"
+        required
         [#CITIZEN_DIALOG_ISPRO#]
       />
