--- a/project/www/admin/src/template/dialog/transpArm.html
+++ b/project/www/admin/src/template/dialog/transpArm.html
@@ -1,5 +1,5 @@
-<div class="two-column admin-title"><h1>Lieu</h1></div>
-<label for="dialog-lieu-select">lieu</label>
-<select name="lieu" id="dialog-lieu-select" class="input-admin"[#CITIZEN_DIALOG_ISPRO#]>
-    <option value=""></option>[#CITIZEN_DIALOG_LIEU#]
+<div class="two-column admin-title"><h1>Armement</h1></div>
+<label for="dialog-arm-select">Armement</label>
+<select name="arm" id="dialog-arm-select" class="input-admin" required[#CITIZEN_DIALOG_ISPRO#]>
+    <option value=""></option>[#CITIZEN_DIALOG_ARM#]
 </select>
