--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -16,8 +16,8 @@
                     <img class="img-add" id="img-add" src="[#CITIZEN_CONST_IMG#]" alt="add img"[#CITIZEN_CONST_ISPRO#]>
                 </label>
             </div>
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_CONST_NOM#]" class="input-admin"[#CITIZEN_CONST_ISPRO#]>
-            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_CONST_ISPRO#]>[#CITIZEN_CONST_CONTENU#]</textarea>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_CONST_NOM#]" class="input-admin" required[#CITIZEN_CONST_ISPRO#]>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode" required[#CITIZEN_CONST_ISPRO#]>[#CITIZEN_CONST_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="" checked>
             <div id="div-all-tab" class="two-column">
                 <div id="div-ul-onglets">
