--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -218,8 +218,7 @@
       </div>
     </footer>
 
-    <style>
-      
+  <style>
   </style>
   <dialog id="dialog">
       <form class="admin-contenu" id="dialog-form" method="post">
@@ -273,12 +272,12 @@
       <script src="./src/js/tab_body_empty.js"></script>
       <script src="./src/js/page_admin.js"></script>
       <script src="./src/js/onglet.js"></script>
+      <script src="./src/js/inputRequire.js"></script>
       <script src="./src/js/dialog/dialog_main_header.js"></script>
       <script src="./src/js/dialog/modifInputDialog.js"></script>
       <script src="./src/js/form/form_list_data.js"></script>
       <script src="./src/js/img/img_icon.js"></script>
       <script>
-        
         /*document.querySelectorAll(".text-bbcode").forEach(element => {
           sceditor.create(element, {
             format: 'bbcode',
