--- a/project/www/admin/src/template/objet/add_mod_especes.html
+++ b/project/www/admin/src/template/objet/add_mod_especes.html
@@ -27,22 +27,22 @@
                     </figure>
                 </div>
             </div>
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_ESPECES_NOM#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_ESPECES_NOM#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
             <label for="categorie-select">catégorie</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
+            <select name="categorie" id="categorie-select" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ESPECES_CAT#]
             </select>
             <label for="lieu-select">lieu</label>
-            <select name="lieu" id="lieu-select" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
+            <select name="lieu" id="lieu-select" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ESPECES_LIEU#]
             </select>
-            <label for="gouvernence">gouvernence</label><input type="text" name="gouvernence" id="gouvernence" value="[#CITIZEN_ESPECES_GOUV#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
-            <label for="souverainete">souverainete</label><input type="text" name="souverainete" id="souverainete" value="[#CITIZEN_ESPECES_SOUV#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
-            <label for="philosophie">philosophie</label><input type="text" name="philosophie" id="philosophie" value="[#CITIZEN_ESPECES_PHILO#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
-            <label for="religion">religion</label><input type="text" name="religion" id="religion" value="[#CITIZEN_ESPECES_RELIGION#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
-            <label for="premier_cont">premier cont</label><input type="text" name="premier_cont" id="premier_cont" value="[#CITIZEN_ESPECES_PRCT#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
-            <label for="origine">origine</label><input type="text" name="origine" id="origine" value="[#CITIZEN_ESPECES_ORIGINE#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
-            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ESPECES_ISPRO#]>[#CITIZEN_ESPECES_CONTENU#]</textarea>
+            <label for="gouvernence">gouvernence</label><input type="text" name="gouvernence" id="gouvernence" value="[#CITIZEN_ESPECES_GOUV#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="souverainete">souverainete</label><input type="text" name="souverainete" id="souverainete" value="[#CITIZEN_ESPECES_SOUV#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="philosophie">philosophie</label><input type="text" name="philosophie" id="philosophie" value="[#CITIZEN_ESPECES_PHILO#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="religion">religion</label><input type="text" name="religion" id="religion" value="[#CITIZEN_ESPECES_RELIGION#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="premier_cont">premier cont</label><input type="text" name="premier_cont" id="premier_cont" value="[#CITIZEN_ESPECES_PRCT#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="origine">origine</label><input type="text" name="origine" id="origine" value="[#CITIZEN_ESPECES_ORIGINE#]" class="input-admin" required[#CITIZEN_ESPECES_ISPRO#]>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode" required[#CITIZEN_ESPECES_ISPRO#]>[#CITIZEN_ESPECES_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-diplom" name="radio-onglet" value="">
             <input type="radio" class="radio-onglet" id="onglet-contro" name="radio-onglet" value="">
