--- a/project/www/admin/src/template/objet/add_mod_proprietaires.html
+++ b/project/www/admin/src/template/objet/add_mod_proprietaires.html
@@ -31,8 +31,8 @@
                     </figure>
                 </div>
             </div>
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_PROPR_NOM#]" class="input-admin"[#CITIZEN_PROPR_ISPRO#]>
-            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_PROPR_ISPRO#]>[#CITIZEN_PROPR_CONTENU#]</textarea>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_PROPR_NOM#]" class="input-admin" required[#CITIZEN_PROPR_ISPRO#]>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode" required[#CITIZEN_PROPR_ISPRO#]>[#CITIZEN_PROPR_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="">
             <div id="div-all-tab" class="two-column">
