--- a/project/www/admin/src/template/dialog/equipem.html
+++ b/project/www/admin/src/template/dialog/equipem.html
@@ -6,6 +6,7 @@
   id="dialog-nom"
   value="[#CITIZEN_ADD_TRANSP_NOM#]"
   class="input-admin"
+  required
   [#CITIZEN_ADD_TRANSP_ISPRO#]
 />
 <label for="dialog-prix">prix</label
@@ -15,6 +16,7 @@
   id="dialog-prix"
   value="[#CITIZEN_ADD_TRANSP_PRIX#]"
   class="input-admin"
+  required
   [#CITIZEN_ADD_TRANSP_ISPRO#]
 />
 <label for="dialog-contenu">contenu</label
@@ -24,6 +26,7 @@
   cols="30"
   rows="10"
   class="input-admin text-bbcode"
+  required
   [#CITIZEN_ADD_TRANSP_ISPRO#]
 >
 [#CITIZEN_ADD_TRANSP_CONTENU#]</textarea
