--- a/project/www/admin/src/template/gameplay/add_mod_article.html
+++ b/project/www/admin/src/template/gameplay/add_mod_article.html
@@ -25,13 +25,13 @@
                     </figure>
                 </div>
             </div>
-            <label for="titre">titre</label><input type="text" name="titre" id="titre" value="[#CITIZEN_ARTI_TITRE#]" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
-            <label for="video">vidéo</label><input type="text" name="video" id="video" value="[#CITIZEN_ARTI_VIDEO#]" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
+            <label for="titre">titre</label><input type="text" name="titre" id="titre" value="[#CITIZEN_ARTI_TITRE#]" class="input-admin" required[#CITIZEN_ARTI_ISPRO#]>
+            <label for="video">vidéo</label><input type="text" name="video" id="video" value="[#CITIZEN_ARTI_VIDEO#]" class="input-admin" required[#CITIZEN_ARTI_ISPRO#]>
             <label for="categorie-select">catégorie</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
+            <select name="categorie" id="categorie-select" class="input-admin" required[#CITIZEN_ARTI_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ARTI_CAT#]
             </select>
-            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_CONTENU#]</textarea>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode" required[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_CONTENU#]</textarea>
             <label for="resume">résumé</label><textarea name="resume" id="resume" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_RESUME#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-gplayType" name="radio-onglet" value="" checked>
             <div id="div-all-tab" class="two-column">
