--- a/project/www/admin/src/template/gameplay/add_mod_screens.html
+++ b/project/www/admin/src/template/gameplay/add_mod_screens.html
@@ -12,8 +12,8 @@
                     <img class="img-add" id="img-add" src="[#CITIZEN_SCREEN_IMG#]" alt="add img"[#CITIZEN_SCREEN_ISPRO#]>
                 </label>
             </div>
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_SCREEN_NOM#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
-            <label for="alt">alt</label><input type="text" name="alt" id="alt" value="[#CITIZEN_SCREEN_ALT#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_SCREEN_NOM#]" class="input-admin" required[#CITIZEN_SCREEN_ISPRO#]>
+            <label for="alt">alt</label><input type="text" name="alt" id="alt" value="[#CITIZEN_SCREEN_ALT#]" class="input-admin" required[#CITIZEN_SCREEN_ISPRO#]>
             <div class="two-column add-mod-bt">
                 <button class="sauvegarde" id="annuler-form">annuler</button>
                 <button class="sauvegarde" id="validation-form">Validation</button>
