--- a/project/www/admin/src/template/objet/add_mod_mat_prem.html
+++ b/project/www/admin/src/template/objet/add_mod_mat_prem.html
@@ -27,12 +27,12 @@
                     </figure>
                 </div>
             </div>
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_MAT_PRE_NOM#]" class="input-admin"[#CITIZEN_MAT_PRE_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_MAT_PRE_NOM#]" class="input-admin" required[#CITIZEN_MAT_PRE_ISPRO#]>
             <label for="categorie-select">catégorie</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
+            <select name="categorie" id="categorie-select" class="input-admin" required[#CITIZEN_ARTI_ISPRO#]>
                 <option value=""></option>[#CITIZEN_MAT_PRE_CAT#]
             </select>
-            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_MAT_PRE_ISPRO#]>[#CITIZEN_MAT_PRE_CONTENU#]</textarea>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode" required[#CITIZEN_MAT_PRE_ISPRO#]>[#CITIZEN_MAT_PRE_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="">
             <div id="div-all-tab" class="two-column">
