--- a/project/www/admin/src/template/objet/add_mod_services.html
+++ b/project/www/admin/src/template/objet/add_mod_services.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             
-            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_SERV_NOM#]" class="input-admin"[#CITIZEN_SERV_ISPRO#]>
-            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_SERV_ISPRO#]>[#CITIZEN_SERV_CONTENU#]</textarea>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_SERV_NOM#]" class="input-admin" required[#CITIZEN_SERV_ISPRO#]>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode" required[#CITIZEN_SERV_ISPRO#]>[#CITIZEN_SERV_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="">
             <div id="div-all-tab" class="two-column">
