--- a/project/www/src/css/civilisation.css
+++ b/project/www/src/css/civilisation.css
@@ -25,49 +25,79 @@ div.desc {
   text-align: center;
   color: aliceblue;
 }
+
 .hero {
   display: inline-block;
   position: relative;
   width: 400px;
-  min-width: 400px;
-  border-radius: 30px;
-  overflow:hidden;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  box-shadow: 5px 5px 30px rgba(37, 37, 37, 0.3);
   margin: 30px;
 }
 
-.hero-profile-img {
+img#hero-profile-img {
   width: 100%;
-  height: 70%;
+  height: auto;
+  margin: 0px auto;
 }
 
 .hero-description-bk {
-  border-radius: 30px;
   position: absolute;
-  top: 67%;
-  left: -5px;
+  top: 165px;
   height: 25%;
-  width: 108%;
-  transform: skew(19deg, -9deg);
+  width: 400px;
+
 }
 
 .especes .hero-description-bk {
-  background-image: linear-gradient(-20deg , var(--blue-vert-color), var(--dark-black-color))
+  background-image: linear-gradient(var(--dark-black-color), var(--light-color))
 }
-
 
 .hero-title a {
   position: absolute;
   color: #fff;
   font-weight: 900;
-  top: 74%;
-  left: 150px;
-  bottom: 32%;
+  top: 130px;
+  left: 40%;
   font-size: 25px;
-  transform: skew(19deg, -9deg);
+
 }
-.voir_aussi h2{
+
+.voir_aussi h2 {
   margin-left: 20px;
+}
+
+.voir_aussi_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 500px) {
+  .hero-description-bk {
+    position: absolute;
+    top: 75%;
+    height: 25%;
+    width: 400px;
+
+  }
+
+  .hero-title a {
+    position: absolute;
+    color: #fff;
+    font-weight: 900;
+    top: 47%;
+    left: 40%;
+    font-size: 20px;
+
+  }
+
+  #hero-profile-img {
+    width: 320px;
+    height: auto;
+  }
 }
 
 /* END CARD DESIGN */
