--- a/project/www/admin/src/template/dialog/diplom.html
+++ b/project/www/admin/src/template/dialog/diplom.html
@@ -12,7 +12,7 @@
 <label for="dialog-traite">traité</label
 ><input
   type="text"
-  name="nom"
+  name="traite"
   id="dialog-traite"
   value="[#CITIZEN_ADD_DIPLOM_TRAITE#]"
   class="input-admin"
