--- a/project/www/src/css/squadron.css
+++ b/project/www/src/css/squadron.css
@@ -5,7 +5,7 @@
     background-position-y: 60%;
     background-position-x: 50%;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     /*--metal-tex: url(https://images.unsplash.com/photo-1602108987428-4768d7c7ecbe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);*/
 
 }
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
 }
 
 .text_squadron a img {
@@ -24,8 +24,7 @@
 }
 
 .text_squadron a {
-    margin-top: 60px;
-    background-color: rgba(56, 56, 56, 0.678);
+    background-color: var(--medium-light-color);
     width: 100%;
     padding: 30px 0;
     color: rgb(255, 255, 255);
